@@ -1,4 +1,5 @@
 Developement
+	User proper NPERR and NPRES codes in the URLNotify and DestroyStream
 0.9.9
 	Minor changes to the preference setting code
 	Start preparing for 0.9.9 release
